--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
       </li>
 
       <li>
-        Oreos
+        eggs
         <button class="remove-item btn-link text-red">
           <i class="fa-solid fa-xmark"></i>
         </button>
       </li>
 
       <li>
-       Milk
+       eggeno
         <button class="remove-item btn-link text-red">
           <i class="fa-solid fa-xmark"></i>
         </button>
